--- a/package.json
+++ b/package.json
@@ -1,12 +1,25 @@
 {
-  "name": "dsp",
-  "version": "0.0.1",
-  "description": "",
-  "main": "main.js",
+  "name": "audio-visualizers",
+  "version": "1.0.0",
+  "main": "index.js",
+  "type": "module",
+  "author": "Andrei Neacșu <andrei.neacsu@ownzones.com>",
+  "license": "MIT",
   "scripts": {
-    "start": "hs -o"
+    "build": "rspack --mode=production --node-env=production",
+    "check-types": "tsc --noEmit",
+    "watch": "rspack --watch",
+    "start": "rspack serve"
   },
   "devDependencies": {
-    "http-server": "^0.11.1"
+    "@rspack/cli": "^1.4.2",
+    "@rspack/core": "^1.4.2",
+    "@types/react": "^19.1.8",
+    "@types/react-dom": "^19.1.6",
+    "typescript": "^5.8.3"
+  },
+  "dependencies": {
+    "react": "^19.1.0",
+    "react-dom": "^19.1.0"
   }
 }
